[gd_scene load_steps=11 format=2]

[ext_resource path="res://meshes/warehouse_floor.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://meshes/warehouse_celling.meshlib" type="MeshLibrary" id=2]
[ext_resource path="res://meshes/warehouse_wall.meshlib" type="MeshLibrary" id=3]
[ext_resource path="res://ControlPoint/ControlPoint.tscn" type="PackedScene" id=4]
[ext_resource path="res://room/warehouse.gd" type="Script" id=5]
[ext_resource path="res://meshes/decor.meshlib" type="MeshLibrary" id=6]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.686275, 0.988235, 0.980392, 1 )
emission_enabled = true
emission = Color( 0.686275, 0.988235, 0.980392, 1 )
emission_energy = 4.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.992157, 0.827451, 0.541176, 1 )
emission_enabled = true
emission = Color( 0.992157, 0.827451, 0.541176, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=4]

[node name="warehouse" type="Spatial" groups=[
"room",
]]
script = ExtResource( 5 )

[node name="ligth" type="Spatial" parent="."]
visible = false

[node name="neon" type="Spatial" parent="ligth"]

[node name="lamp" type="SpotLight" parent="ligth/neon"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 75, 80, -75 )
light_color = Color( 0.780392, 1, 0.996078, 1 )
light_energy = 10.0
light_specular = 0.6
shadow_enabled = true
spot_range = 110.0
spot_attenuation = 1.31951
spot_angle = 75.0
__meta__ = {
"_editor_description_": ""
}

[node name="lamp1" type="SpotLight" parent="ligth/neon"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 75.0513, 80, 25.769 )
light_color = Color( 0.780392, 1, 0.996078, 1 )
light_energy = 10.0
light_specular = 0.6
shadow_enabled = true
spot_range = 110.0
spot_attenuation = 1.31951
spot_angle = 75.0
__meta__ = {
"_editor_description_": ""
}

[node name="lamp2" type="SpotLight" parent="ligth/neon"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 75, 80, -175 )
light_color = Color( 0.780392, 1, 0.996078, 1 )
light_energy = 10.0
light_specular = 0.6
shadow_enabled = true
spot_range = 110.0
spot_attenuation = 1.31951
spot_angle = 75.0
__meta__ = {
"_editor_description_": ""
}

[node name="lamp3" type="SpotLight" parent="ligth/neon"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 75, 80, 125 )
light_color = Color( 0.780392, 1, 0.996078, 1 )
light_energy = 10.0
light_specular = 0.6
shadow_enabled = true
spot_range = 110.0
spot_attenuation = 1.31951
spot_angle = 75.0
__meta__ = {
"_editor_description_": ""
}

[node name="lamp4" type="SpotLight" parent="ligth/neon"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -75, 80, -75 )
light_color = Color( 0.780392, 1, 0.996078, 1 )
light_energy = 10.0
light_specular = 0.6
shadow_enabled = true
spot_range = 110.0
spot_attenuation = 1.31951
spot_angle = 75.0
__meta__ = {
"_editor_description_": ""
}

[node name="lamp5" type="SpotLight" parent="ligth/neon"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -75, 80, 25 )
light_color = Color( 0.780392, 1, 0.996078, 1 )
light_energy = 10.0
light_specular = 0.6
shadow_enabled = true
spot_range = 110.0
spot_attenuation = 1.31951
spot_angle = 75.0
__meta__ = {
"_editor_description_": ""
}

[node name="lamp6" type="SpotLight" parent="ligth/neon"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -75, 80, -175 )
light_color = Color( 0.780392, 1, 0.996078, 1 )
light_energy = 10.0
light_specular = 0.6
shadow_enabled = true
spot_range = 110.0
spot_attenuation = 1.31951
spot_angle = 75.0
__meta__ = {
"_editor_description_": ""
}

[node name="lamp7" type="SpotLight" parent="ligth/neon"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -75, 80, 125 )
light_color = Color( 0.780392, 1, 0.996078, 1 )
light_energy = 10.0
light_specular = 0.6
shadow_enabled = true
spot_range = 110.0
spot_attenuation = 1.31951
spot_angle = 75.0
__meta__ = {
"_editor_description_": ""
}

[node name="source_ligth" type="Spatial" parent="."]
visible = false

[node name="neon" type="Spatial" parent="source_ligth"]

[node name="lamp_neon_l" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, -77, 87, -75 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_r" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, -74, 87, -75 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_l2" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, -77, 87, 24.5 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_r2" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, -74, 87, 24.5 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_l3" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, 73, 87, -75 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_r3" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, 76, 87, -75 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_l4" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, 73, 87, 24.5 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_r4" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, 76, 87, 24.5 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_l5" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, -77, 87, 124.5 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_r5" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, -74, 87, 124.5 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_l6" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, 73, 87, 124.5 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_r6" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, 76, 87, 124.5 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_l7" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, -77, 87, -175 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_r7" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, -74, 87, -175 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_l8" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, 73, 87, -175 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lamp_neon_r8" type="MeshInstance" parent="source_ligth/neon"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 14, 76, 87, -175 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="window" type="Spatial" parent="source_ligth"]

[node name="lucarne" type="MeshInstance" parent="source_ligth/window"]
transform = Transform( 10.5, 4.0422e-15, 0, -4.24431e-13, 0.1, 0, 0, 0, 9, 75, 100, -25 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lucarne2" type="MeshInstance" parent="source_ligth/window"]
transform = Transform( 11, 4.0422e-15, 0, -4.44642e-13, 0.1, 0, 0, 0, 9, -75, 100, -25 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lucarne5" type="MeshInstance" parent="source_ligth/window"]
transform = Transform( 10.5, 4.0422e-15, 0, -4.24431e-13, 0.1, 0, 0, 0, 9, 75, 100, 175 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lucarne6" type="MeshInstance" parent="source_ligth/window"]
transform = Transform( 11, 4.0422e-15, 0, -4.44642e-13, 0.1, 0, 0, 0, 9, -75, 100, 175 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lucarne7" type="MeshInstance" parent="source_ligth/window"]
transform = Transform( 10.5, 4.0422e-15, 0, -4.24431e-13, 0.1, 0, 0, 0, 9, 75, 100, -125 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lucarne8" type="MeshInstance" parent="source_ligth/window"]
transform = Transform( 11, 4.0422e-15, 0, -4.44642e-13, 0.1, 0, 0, 0, 9, -75, 100, -125 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lucarne9" type="MeshInstance" parent="source_ligth/window"]
transform = Transform( 10.5, 4.0422e-15, 0, -4.24431e-13, 0.1, 0, 0, 0, 9, 75, 100, -225 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lucarne10" type="MeshInstance" parent="source_ligth/window"]
transform = Transform( 11, 4.0422e-15, 0, -4.44642e-13, 0.1, 0, 0, 0, 9, -75, 100, -225 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lucarne4" type="MeshInstance" parent="source_ligth/window"]
transform = Transform( 11, 4.0422e-15, 0, -4.44642e-13, 0.1, 0, 0, 0, 9, -75, 100, 75 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="lucarne3" type="MeshInstance" parent="source_ligth/window"]
transform = Transform( 11, 4.0422e-15, 0, -4.44642e-13, 0.1, 0, 0, 0, 9, 75, 100, 75 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="celling" type="GridMap" parent="." groups=[
"environnement",
]]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 100, 0 )
visible = false
mesh_library = ExtResource( 2 )
cell_size = Vector3( 50, 1, 50 )
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 1, 2, 0, 0, 65533, 0, 0, 65534, 0, 1, 65535, 0, 0, 0, 1, 0, 1, 1, 2, 2, 1, 536870912, 65533, 1, 0, 65534, 1, 2, 65535, 1, 0, 0, 2, 0, 1, 2, 1, 2, 2, 0, 65533, 2, 0, 65534, 2, 1, 65535, 2, 0, 0, 3, 0, 1, 3, 2, 2, 3, 0, 65533, 3, 0, 65534, 3, 2, 65535, 3, 0, 0, 4, 0, 1, 4, 536870913, 2, 4, 0, 65533, 4, 0, 65534, 4, 1, 65535, 4, 0, 0, 65532, 0, 1, 65532, 1, 2, 65532, 0, 65533, 65532, 0, 65534, 65532, 1, 65535, 65532, 0, 0, 65533, 0, 1, 65533, 2, 2, 65533, 0, 65533, 65533, 0, 65534, 65533, 2, 65535, 65533, 0, 0, 65534, 0, 1, 65534, 1, 2, 65534, 0, 65533, 65534, 0, 65534, 65534, 1, 65535, 65534, 0, 0, 65535, 536870912, 1, 65535, 2, 2, 65535, 0, 65533, 65535, 0, 65534, 65535, 2, 65535, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="floor" type="GridMap" parent="." groups=[
"environnement",
"floor",
]]
mesh_library = ExtResource( 1 )
cell_size = Vector3( 50, 1, 25 )
data = {
"cells": PoolIntArray( 0, 0, 536870913, 1, 0, 536870913, 2, 0, 1, 65533, 0, 1, 65534, 0, 536870913, 65535, 0, 1, 0, 1, 0, 1, 1, 0, 2, 1, 536870912, 65533, 1, 0, 65534, 1, 536870912, 65535, 1, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 65533, 2, 536870912, 65534, 2, 536870912, 65535, 2, 536870912, 0, 3, 1, 1, 3, 1, 2, 3, 536870913, 65533, 3, 1, 65534, 3, 1, 65535, 3, 1, 0, 4, 0, 1, 4, 0, 2, 4, 536870912, 65533, 4, 0, 65534, 4, 536870912, 65535, 4, 536870912, 0, 5, 536870912, 1, 5, 0, 2, 5, 536870912, 65533, 5, 536870912, 65534, 5, 0, 65535, 5, 536870912, 0, 6, 536870913, 1, 6, 1, 2, 6, 536870913, 65533, 6, 536870913, 65534, 6, 536870913, 65535, 6, 536870913, 0, 7, 536870912, 1, 7, 536870912, 2, 7, 0, 65533, 7, 536870912, 65534, 7, 536870912, 65535, 7, 536870912, 0, 65526, 536870912, 1, 65526, 536870912, 2, 65526, 536870912, 65533, 65526, 536870912, 65534, 65526, 0, 65535, 65526, 536870912, 0, 65527, 1, 1, 65527, 536870913, 2, 65527, 1, 65533, 65527, 536870913, 65534, 65527, 536870913, 65535, 65527, 536870913, 0, 65528, 0, 1, 65528, 536870912, 2, 65528, 536870912, 65533, 65528, 536870912, 65534, 65528, 0, 65535, 65528, 536870912, 0, 65529, 536870912, 1, 65529, 0, 2, 65529, 536870912, 65533, 65529, 536870912, 65534, 65529, 0, 65535, 65529, 0, 0, 65530, 1, 1, 65530, 536870913, 2, 65530, 1, 65533, 65530, 536870913, 65534, 65530, 536870913, 65535, 65530, 1, 0, 65531, 0, 1, 65531, 0, 2, 65531, 0, 65533, 65531, 536870912, 65534, 65531, 536870912, 65535, 65531, 536870912, 0, 65532, 0, 1, 65532, 0, 2, 65532, 536870912, 65533, 65532, 536870912, 65534, 65532, 0, 65535, 65532, 536870912, 0, 65533, 1, 1, 65533, 1, 2, 65533, 1, 65533, 65533, 536870913, 65534, 65533, 536870913, 65535, 65533, 1, 0, 65534, 0, 1, 65534, 0, 2, 65534, 0, 65533, 65534, 536870912, 65534, 65534, 0, 65535, 65534, 0, 0, 65535, 0, 1, 65535, 0, 2, 65535, 0, 65533, 65535, 0, 65534, 65535, 0, 65535, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="wall_left" type="GridMap" parent="." groups=[
"environnement",
]]
transform = Transform( -1.62921e-07, -1, 0, -1.62921e-07, 2.65431e-14, -1, 1, -1.62921e-07, -1.62921e-07, 150, 0, 0 )
visible = false
mesh_library = ExtResource( 3 )
cell_size = Vector3( 50, 1, 50 )
data = {
"cells": PoolIntArray( 0, 65534, 0, 1, 65534, 536870912, 2, 65534, 0, 3, 65534, 536870912, 65531, 65534, 536870912, 65532, 65534, 536870912, 65533, 65534, 536870912, 65534, 65534, 536870912, 65535, 65534, 536870912, 0, 65535, 0, 1, 65535, 0, 2, 65535, 536870912, 3, 65535, 0, 65531, 65535, 536870912, 65532, 65535, 536870912, 65533, 65535, 536870912, 65534, 65535, 536870912, 65535, 65535, 536870912 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="wall_right" type="GridMap" parent="." groups=[
"environnement",
]]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, -150, 0, 0 )
visible = false
mesh_library = ExtResource( 3 )
cell_size = Vector3( 50, 1, 50 )
data = {
"cells": PoolIntArray( 0, 65534, 0, 1, 65534, 0, 2, 65534, 536870912, 3, 65534, 536870912, 4, 65534, 0, 65532, 65534, 536870912, 65533, 65534, 536870912, 65534, 65534, 536870912, 65535, 65534, 536870912, 0, 65535, 536870912, 1, 65535, 536870912, 2, 65535, 536870912, 3, 65535, 536870912, 4, 65535, 0, 65532, 65535, 536870912, 65533, 65535, 0, 65534, 65535, 536870912, 65535, 65535, 536870912 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 3, 0 )
}

[node name="wall_front" type="GridMap" parent="." groups=[
"environnement",
]]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 100, 0, -250 )
visible = false
mesh_library = ExtResource( 3 )
cell_size = Vector3( 50, 1, 50 )
data = {
"cells": PoolIntArray( 0, 65534, 0, 65531, 65534, 536870912, 65532, 65534, 536870912, 65533, 65534, 536870912, 65534, 65534, 536870912, 65535, 65534, 0, 0, 65535, 536870912, 65531, 65535, 536870912, 65532, 65535, 0, 65533, 65535, 0, 65534, 65535, 536870912, 65535, 65535, 536870912 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="wall_back" type="GridMap" parent="." groups=[
"environnement",
]]
transform = Transform( -1, -3.25841e-07, 5.30863e-14, 0, -1.62921e-07, -1, 3.25841e-07, -1, 1.62921e-07, 100, 0, 200 )
visible = false
mesh_library = ExtResource( 3 )
cell_size = Vector3( 50, 1, 50 )
data = {
"cells": PoolIntArray( 0, 65534, 0, 1, 65534, 0, 2, 65534, 536870912, 3, 65534, 536870912, 131076, 65534, 0, 196607, 65534, 0, 0, 65535, 0, 1, 65535, 536870912, 2, 65535, 0, 3, 65535, 536870912, 131076, 65535, 0, 196607, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 2, 0 )
}

[node name="deco" type="GridMap" parent="." groups=[
"environnement",
]]
mesh_library = ExtResource( 6 )
cell_size = Vector3( 25, 1, 25 )
data = {
"cells": PoolIntArray( 65538, 3, 1073741849, 65536, 4, 24, 65537, 4, 18, 65538, 4, 12, 65539, 4, 1073741848, 131068, 4, 23, 131069, 4, 23, 131070, 4, 1073741841, 131071, 4, 11, 65536, 5, 12, 65537, 5, 1073741842, 65538, 5, 1073741848, 65539, 5, 1073741842, 131068, 5, 17, 131069, 5, 5, 131070, 5, 1073741835, 131071, 5, 5, 65536, 65528, 4, 65537, 65528, 1073741846, 65538, 65528, 16, 65539, 65528, 10, 131068, 65528, 13, 131069, 65528, 19, 131070, 65528, 1073741831, 131071, 65528, 1, 65536, 65529, 10, 65537, 65529, 1073741840, 65538, 65529, 536870934, 65539, 65529, 4, 131068, 65529, 1, 131069, 65529, 19, 131070, 65529, 13, 131071, 65529, 7, 65536, 65531, 1073741824, 131071, 65531, 0, 65539, 65533, 25, 65536, 65534, 8, 65537, 65534, 14, 65538, 65534, 8, 65539, 65534, 2, 131068, 65534, 21, 131069, 65534, 15, 131070, 65534, 9, 131071, 65534, 3, 65536, 65535, 20, 65537, 65535, 20, 65538, 65535, 1073741832, 65539, 65535, 14, 131068, 65535, 21, 131069, 65535, 536870915, 131070, 65535, 15, 131071, 65535, 1073741833 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="ControlPoint" type="Spatial" parent="."]
visible = false

[node name="P1" parent="ControlPoint" instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 132.259, 3, -230.258 )
visible = true
north = Vector2( 0, 0 )
east = Vector2( 0, 0 )

[node name="P2" parent="ControlPoint" instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 132.259, 3, -104.19 )
visible = true
north = Vector2( 0, 0 )

[node name="P3" parent="ControlPoint" instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 132.259, 3, 66.8709 )
visible = true
north = Vector2( 0, 0 )

[node name="P4" parent="ControlPoint" instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 132.259, 3, 179.462 )
visible = true
north = Vector2( 0, 0 )
west = Vector2( 0, 0 )

[node name="P5" parent="ControlPoint" instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -129.88, 3, 179.462 )
visible = true
south = Vector2( 0, 0 )
west = Vector2( 0, 0 )

[node name="P6" parent="ControlPoint" instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -129.371, 3, 52.6744 )
visible = true
south = Vector2( 0, 0 )

[node name="P7" parent="ControlPoint" instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -129.371, 3, -102.698 )
visible = true
south = Vector2( 0, 0 )

[node name="P8" parent="ControlPoint" instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -129.371, 3, -235.745 )
visible = true
south = Vector2( 0, 0 )
east = Vector2( 0, 0 )

[node name="P9" parent="ControlPoint" instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -2.78024, 3, -76.4479 )
visible = true
west = Vector2( 0, 0 )
east = Vector2( 0, 0 )

[node name="P10" parent="ControlPoint" instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -2.78024, 3, 52.048 )
visible = true
west = Vector2( -1, 1 )
east = Vector2( -1, -1 )
